Fixed user card wrapping issues.

--- a/assets/less/mio/classes/header.less
+++ b/assets/less/mio/classes/header.less
@@ -216,6 +216,10 @@
             text-decoration: none;
             display: block;
             text-align: right;
+            text-overflow: ellipsis;
+            max-width: 150px;
+            overflow: hidden;
+            white-space: nowrap;
 
             @media (min-width: @site-mobile-width) {
                 &:hover {
